Fixed the cart to become more responsive when on smaller screens

--- a/style.css
+++ b/style.css
@@ -8,6 +8,10 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+body {
+    min-width: 300px;
+}
+
 .dropdown-toggle::after {
     display: none;
 }
@@ -66,7 +70,8 @@ main {
     border-radius: 6px;
 }
 
-#add-button {
+#add-button,
+#rent-button {
     padding: 5px;
     color: var(--secondary-color);
     background-color: var(--primary-color);
@@ -75,10 +80,18 @@ main {
     border-radius: 5px;
 }
 
-#add-button:hover {
+#add-button:hover,
+#rent-button:hover {
     background-color: var(--hover-secondary);
 }
 
-#cart {
-    padding: 5px;
+.dropdown-menu {
+    width: 250px;
 }
+#cart-item {
+    border-color: var(--secondary-color);
+}
+
+/* .cart-item {
+    padding: 0px;
+} */
